--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "eslint-fix": "eslint ./src --ext .vue --ext .js --fix"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -15,6 +16,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
+    "vue-slider-component": "^3.2.15",
     "vuex": "^3.6.2",
     "vuex-module-decorators": "1.2",
     "vuex-persist": "^3.1.3",
